# replkit2

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  README.txt  ROADMAP.md  basedpyright.json  pyproject.toml  pyright_report.json
examples/: README.md  markdown_demo.py  monitor.py  notes_mcp.py  readme.py  readme_old.py  todo.py  todo_api.py
examples/_archive/: README.md  flask_style.py  monitor.py  todo.py  todo_api.py
examples/notebook/: README.md  app.ipynb  sales.md
src/pydov4/: README.md  ROADMAP.md  app.py  llms.txt  serializer.py
src/pydov4/commands/: __init__.py
src/replkit2/: __init__.py  app.py  decorators.py  formatters.py  llms.txt  serializers.py  types.py
src/replkit2/integrations/: mcp.py  notebook.py
src/replkit2/textkit/: README.md  __init__.py  charts.py  display.py  formatter.py  layout.py  serializer.py
src/replkit2/textkit/markdown/: PLAN.md  __init__.py  base.py  table.py
src/replkit2/types/: core.py
