[project]
name = "replkit2"
version = "0.2.0"
description = "A minimal Python framework for building stateful REPL applications with ASCII display"
readme = "README.txt"
authors = [
    { name = "Fredrik Angelsen", email = "fredrikangelsen@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
examples = [
    "psutil>=7.0.0",      # For system monitor example
]
api = [
    "fastapi>=0.115.14",  # For API examples
    "uvicorn",            # ASGI server for FastAPI
]
mcp = [
    "fastmcp>=2.9.2",     # For MCP integration (future)
]
dev = [
    "ruff",
    "basedpyright>=1.29.5",
]
lsp = [
    "pygls>=1.3.1",
    "nest-asyncio>=1.6.0",  # For handling nested event loops in REPL
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.29.5",
]

[tool.ruff]
line-length = 120

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
pythonPlatform = "Linux"
include = ["src/replkit2"]
